FIX: o mixin flex (direction wrap agora é $direction)

--- a/src/scss/mixins/flex.module.scss
+++ b/src/scss/mixins/flex.module.scss
@@ -1,6 +1,6 @@
 @mixin flex($direction: row , $justify: flex-start , $align: stretch , $gap: 0) {
     display: flex;
-    flex-direction: wrap;
+    flex-direction: $direction;
     justify-content: $justify;
     align-items: $align;
     gap: $gap;
